<resources>
    <string name="app_name">Superhero</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="singup_to_add_favorite_heroes">Singup to add favorite heroes</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="dialog_exit">Anda yakin ingin keluar?</string>
</resources>
